fix display on firefox

--- a/src/components/work.css
+++ b/src/components/work.css
@@ -36,7 +36,7 @@
 }
 
 .work-item .date {
-    margin-top: -70px;
+    margin-top: -60px;
     margin-left: -5px;
     max-width: fit-content;
     font-family: 'Courier New', Courier, monospace;
